personal keys removed

--- a/BotAppWithSpellCheck/Web.config
+++ b/BotAppWithSpellCheck/Web.config
@@ -6,10 +6,10 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
-    <add key="BotId" value="BotSpellCehck2" />
-    <add key="MicrosoftAppId" value="9e4fb699-2ead-4cc0-a26b-7b7c931bee43" />
-    <add key="MicrosoftAppPassword" value="nekZFGI^-lvkbTIR96409)-" />
-    <add key="BingSpellCheckKey" value="e4d6369c0c1c4a0d903840f3ed56f5ec" />
+    <add key="BotId" value="your-bot-id" />
+    <add key="MicrosoftAppId" value="your-app-id" />
+    <add key="MicrosoftAppPassword" value="your-app-password" />
+    <add key="BingSpellCheckKey" value="your-bing-spellcheck-key" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
